--- a/src/main/resources/templates/admin_CardList.html
+++ b/src/main/resources/templates/admin_CardList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inquire board</title>
+    <title>admin cardList</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
     <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>-->
@@ -19,19 +19,19 @@
 <body>
 <section>
     <nav id="side_menu">
-        <h3>관리자 페이지</h3>
+        <h4>Menu</h4>
 
-        <ul class="nav nav-pills justify-content-end" style="margin-bottom:20px; margin-top:70px;">
+        <ul class="nav nav-pills justify-content-end">
             <li>
-                <a href="#"><h4 id="links1">┖ 카드사 목록</h4></a>
+                <a href="#"><p >┖ 카드사 목록</p></a>
             </li>
 
             <li>
-                <a href="#"><h4 id="links2">┖ 카드사 등록</h4></a>
+                <a href="#"><p>┖ 카드사 등록</p></a>
             </li>
 
             <li>
-                <a href="#"><h4 id="links3">┖ 카드 &nbsp; &nbsp;등록</h4></a>
+                <a href="#"><p>┖ 카드 &nbsp; &nbsp;등록</p></a>
             </li>
 
         </ul>
