--- a/src/main/resources/templates/board_detail.html
+++ b/src/main/resources/templates/board_detail.html
@@ -1,60 +1,62 @@
-<html xmlns:th="http://www.thymleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="ko">
+<html xmlns:th="http://www.thymleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml" lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inquiry View</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
-    <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <title>board detail</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-            crossorigin="anonymous"
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     />
+    <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>-->
+    <!--    <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>-->
+    <!--    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
 
 
+
+    <link rel="stylesheet" href="../static/css/header.css" />
+    <link rel="stylesheet" href="../static/css/board_detail.css" />
+    <link rel="stylesheet" href="../static/css/footer.css" />
 </head>
 
 
 <body>
+<th:block th:replace="header:: header"></th:block>
 <div class="container">
-    <th:block th:replace="fragment/soriel_Header :: headerFragment"></th:block>
-    <input type="hidden" id="id" th:value="${postDto.id}">
-    <input type="hidden" id="writer_id" name="writer_id" th:value="${postDto.writer_id}">
+
+    <input type="hidden" id="id">
+    <input type="hidden" id="writer_id" name="writer_id">
     <div class="title" style="border-bottom: 1px solid #dddddd; margin-top: 100px;">
-        <h4 id="title" th:text="${postDto.title}"></h4>
+        <h4 id="title"></h4>
         <span style="display:inline-block; margin-top:3px">
-                    <p th:inline="text">
+                    <p>
                         [[${#temporals.format(postDto.createdDate,'yyyy-MM-dd HH:mm')}]]
                     </p>
                 </span>
     </div>
 
     <div class="content shadow-sm p-3 mb-5 bg-white rounded" style="font-size: 24px; margin-top: 30px; margin-bottom: 20px !important;">
-        <p id="content" class="text-break" th:utext="${#strings.replace( #strings.escapeXml( postDto.content ),T(java.lang.System).getProperty('line.separator'),'&lt;br /&gt;')}" th:inline="text"></p>
+        <p id="content" class="text-break"></p>
     </div>
 
     <div class="text-right">
-        <input id="deleteBtn" class="btn btn-outline-secondary" type="button" value="삭제" th:if="${#authentication.principal.id == postDto.writer_id or #authentication.principal.customName == 'admin'}"/>
-        <input th:onclick="|window.location.href='/post/update/${postDto.id}'|" id="updateBtnf" class="btn btn-outline-secondary" type="button" value="수정" th:if="${#authentication.principal.id == postDto.writer_id}" />
-        <input sec:authorize="hasRole('ROLE_ADMIN')" id="replyBtn" class="btn btn-outline-secondary" type="button" value="답글" th:if="${replyDto == null}"/>
+        <input id="deleteBtn" class="btn btn-outline-secondary" type="button" value="삭제"/>
+        <input id="updateBtnf" class="btn btn-outline-secondary" type="button" value="수정"/>
+        <input id="replyBtn" class="btn btn-outline-secondary" type="button" value="답글"/>
     </div>
 
 
     <div th:if="${replyDto != null}" style="margin-top: 3px">
-        <input type="hidden" id="reply_id" th:value="${replyDto.id}">
+        <input type="hidden" id="reply_id">
         <label style="font-size: 24px; border-bottom: 1px solid #dddddd; margin-top: 60px;">답글</label>
         <span>
-                    <p th:inline="text">
+                    <p>
                         [[${#temporals.format(replyDto.createdDate,'yyyy-MM-dd HH:mm')}]]
                     </p>
                 </span>
 
-        <div id="reply_content_div" class="content shadow-sm p-3 mb-5 bg-white rounded" style="font-size: 24px; margin-top: 30px; margin-bottom: 20px !important;" th:if="${replyDto != null}">
-            <p id="reply_content" class="text-break"
-               th:utext="${#strings.replace( #strings.escapeXml( replyDto.reply_content ),T(java.lang.System).getProperty('line.separator'),'&lt;br /&gt;')}"
-               th:inline="text">
+        <div id="reply_content_div" class="content shadow-sm p-3 mb-5 bg-white rounded" style="font-size: 24px; margin-top: 30px; margin-bottom: 20px !important;" >
+            <p id="reply_content" class="text-break">
 
             </p>
         </div>
@@ -64,9 +66,9 @@
         </div>
 
         <div class="text-right">
-            <input sec:authorize="hasRole('ROLE_ADMIN')" id="reply_deleteBtn" class="btn btn-outline-secondary" type="button" value="삭제" />
-            <input sec:authorize="hasRole('ROLE_ADMIN')" id="reply_updateBtn" class="btn btn-outline-secondary" type="button" value="수정" />
-            <input sec:authorize="hasRole('ROLE_ADMIN')" id="do_reply_updateBtn" class="btn btn-outline-secondary" type="button" value="수정하기" />
+            <input id="reply_deleteBtn" class="btn btn-outline-secondary" type="button" value="삭제" />
+            <input id="reply_updateBtn" class="btn btn-outline-secondary" type="button" value="수정" />
+            <input id="do_reply_updateBtn" class="btn btn-outline-secondary" type="button" value="수정하기" />
         </div>
     </div>
     <!-- reply area -->
@@ -81,6 +83,6 @@
         <input class="btn btn-outline-secondary" type="reset" value="Reset" />
     </div>
 </div>
-<th:block th:replace="fragment/soriel_Footer :: footerFragment"></th:block>
+
 </body>
 </html>
