--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -24,10 +24,22 @@
                     <li> <a href="cardSearch.html" th:href="@{/card/card_search_page}"> 조건검색 </a></li>
                     <li> <a href="#"> 카드사 </a></li>
                     <li>  <a href="boardlist.html" th:href="@{/board/boardlist_page}"> 문의 </a></li>
-                    <li class="loginBtn"> <a href="login.html" th:href="@{/user/login_page}"> <img src="../static/images/login.png">  </a></li>
-
                 </ul>
+
             </div>
+
+            <table class="log">
+                <tr>
+                    <td class="userName" th:text="${logName}"></td>
+                    <td th:if="${logName == null}" class="loginBtn"> <a href="login.html" th:href="@{/user/login_page}"> 로그인 </a></td>
+                    <td th:if="${logName != null}" class="logoutBtn"><a th:href="@{/user/logout}"> 로그아웃 </a> </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td height="40px;" class="adminBtn"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}" href="admin_CardList.html"> 관리자페이지 </a> </td>
+                </tr>
+            </table>
+
         </div>
 
     </header>
