--- a/src/main/resources/templates/admin_CardRegister.html
+++ b/src/main/resources/templates/admin_CardRegister.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Inquire board</title>
+  <title>admin_card register</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
   <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>-->
@@ -11,135 +11,193 @@
   <!--    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
 
 
-  <link rel="stylesheet" th:href="@{/static/css/header.css}" />
+  <link rel="stylesheet" href="../static/css/header.css" />
   <link rel="stylesheet" href="../static/css/footer.css" />
   <link rel="stylesheet" href="../static/css/admin_cardregister.css"/>
 
-  <script th:src="@{/static/js/cardRegister.js}"></script>
+  <script>
+
+
+
+  </script>
+
+
 
 </head>
 
 <body>
-    <section>
 
-      <nav id="side_menu">
-        <h4>Menu</h4>
+<th:block th:replace="header:: header"></th:block>
 
-        <ul class="nav nav-pills justify-content-end">
-          <li>
-            <a href="#"><p >┖ 카드사 목록</p></a>
-          </li>
+<section>
 
-          <li>
-            <a href="#"><p>┖ 카드사 등록</p></a>
-          </li>
+  <nav id="side_menu">
+    <h4>Menu</h4>
 
-          <li>
-            <a href="#"><p>┖ 카드 등록</p></a>
-          </li>
+    <ul class="nav nav-pills justify-content-end">
+      <li>
+        <a href="#"><p >┖ 카드사 목록</p></a>
+      </li>
 
-        </ul>
+      <li>
+        <a href="#"><p>┖ 카드사 등록</p></a>
+      </li>
 
-      </nav>
+      <li>
+        <a href="#"><p>┖ 카드 &nbsp; &nbsp;등록</p></a>
+      </li>
 
-      <div class="imageinfo">
-        <p></p>
-        <h1 class="register">카드 등록</h1>
-        <br><br>
-        <form method="post" action="/admin/card_register" id="form" >
+    </ul>
 
-        <div class="container" id="cardinfo">
+  </nav>
 
-          <br>
-          <label>카드 이미지</label><br>
-          <input type="file" name="cardPhoto" id="cardPhoto">
-          <!--name은 db(dto)랑 맞추는것, id는 스크립트랑 맞추는것 -->
+  <div class="imageinfo">
+    <p></p>
+    <h1 class="register">카드 등록</h1>
+    <br><br>
+    <form method="post" action="/post" id="form">
 
-          <br><br><br><br>
-          <label>카드 명</label> <br>
-          <input type="text" name="cardName" id="cardName" placeholder="카드명">
-          <br><br><br>
+      <div class="container" id="cardinfo">
 
-          <label>카드사</label> <br>
+        <br>
+        <label>카드 이미지</label><br>
+        <input type="file" id="cardPhoto">
 
-          <input type="text" name="cardCompany" id="cardCompany" placeholder="카드사">
+        <br><br><br><br>
+        <label>카드 명</label> <br>
+        <input type="text" id="cardName" placeholder="카드명">
+        <br><br><br>
 
-          <br><br><br>
-          <label>연회비</label> <br>
-          <input type="text" id="annualFee" name="annualFee" placeholder="연 회비"> <br><br><br>
+        <label>카드사</label> <br>
 
-          <label>전월실적</label> <br>
-          <input type="text" id="beforePay" name="beforePay" placeholder= "전월실적"> <br><br><br>
+        <select id="cardCompany" placeholder="카드사 명">
 
-
-          <label>카드 타입</label> <br>
-          <input type="text" id="cardType" name="cardType" placeholder="카드 타입"> <br><br><br>
-
-          <label>카드 링크</label> <br>
-          <input type="text" id="cardLink" name="cardLink" placeholder="카드 링크"> <br><br><br>
+          <option value="1">신한카드</option>
+          <option value="2">우리카드</option>
+          <option value="3">하나카드</option>
+          <option value="4">KB국민카드</option>
+          <option value="5">롯데카드</option>
+          <option value="6">삼성카드</option>
+          <option value="7">새마을카드</option>
 
 
+        </select>
+
+        <br><br><br>
+        <label>연회비</label> <br>
+        <input type="text" id="annualFee" name="annualFee" placeholder="연 회비"> <br><br><br>
+
+        <label>전월실적</label> <br>
+        <input type="text" id="beforePay" name="beforePay" placeholder= "전월실적"> <br><br><br>
 
 
-        </div>
+        <label>카드 타입</label> <br>
+        <select id="cardType" placeholder="카드사 명">
 
-        <div id="cardbenefits">
-
-
-          <div id="benefit1">
-
-            <p id="ggg"> 혜택 1,2,3 (필수 3개)</p>
-
-            <img src="교통.png" width="50" height="50">
-            <img src="교통.png" width="50" height="50">
-            <img src="교통.png" width="50" height="50">
-            <img src="교통.png" width="50" height="50">
-            <img src="교통.png" width="50" height="50">
-            <img src="교통.png" width="50" height="50">
-            <img src="교통.png" width="50" height="50">
-
-
-            <br><br>
-            <label>혜택 1</label>
-            <input type="text" id="a" name="benefit1" placeholder="혜택1"> <br><br><br>
-
-            <label>혜택 2</label>
-            <input type="text" id="b" name="benefit2" placeholder="혜택2"> <br><br><br>
-
-            <label>혜택 3</label>
-            <input type="text" id="c" name="benefit3" placeholder="혜택3"> <br><br><br>
-
-
-          </div>
+          <option value="1">포인트형</option>
+          <option value="2">할인형</option>
 
 
 
-          <div id="benefitsangse">
-          <label>혜택 1 상세</label> <br>
-          <textarea cols="70" maxlength="300" name="benefit1_detail"></textarea>
-          <br><br>
-          <label>혜택 2 상세</label> <br>
-          <textarea cols="70" maxlength="300" name="benefit2_detail"></textarea>
-          <br><br>
-          <label>혜택 3 상세</label> <br>
-          <textarea cols="70" maxlength="300" name="benefit3_detail"></textarea>
-          </div>
+        </select> <br><br><br>
 
-        </div>
+        <label>카드 링크</label> <br>
+        <input type="text" id="cardLink" name="cardLink" placeholder="카드 링크"> <br><br><br>
 
 
-        <input type="reset" value="다시 작성" id="resetbutton">
 
-        <input type="submit" value="등록" id="registerbutton">
 
-        <br><br>
-
-        </form>
       </div>
 
+      <div id="cardbenefits">
 
 
-    </section>
+
+
+        <div id="benefit1">
+
+          <p id="ggg"> 혜택 1,2,3 (필수 3개)</p>
+
+          <button type="button" onclick="A()" id="transportation"><img src="../static/images/교통.png" id="transportation2">교통</button>
+          <button type="button" id="mart"><img src="../static/images/마트편의점.png" id="mart2">마트</button>
+          <button type="button" id="shopping"><img src="../static/images/쇼핑.png" id="shopping2">쇼핑</button>
+          <button type="button" id="movie"><img src="../static/images/영화문화.png" id="movie2">영화</button>
+          <button type="button" id="gasoline"><img src="../static/images/주유.png" id="gasoline2">주유</button>
+          <button type="button" id="cafe"><img src="../static/images/카페디저트.png" id="cafe2">카페</button>
+          <button type="button" id="phone"><img src="../static/images/통신2.png" id="phone2">통신</button>
+
+          <br>
+
+
+          <br><br><br>
+          <label>혜택 1</label>
+
+          <select id="a">
+            <option>선택</option>
+            <option>교통</option>
+            <option>마트편의점</option>
+            <option>쇼핑</option>
+            <option>영화문화</option>
+            <option>주유</option>
+            <option>카페</option>
+            <option>통신</option>
+          </select> <br>
+
+          <label>혜택 1 상세</label> <br>
+          <textarea cols="70" maxlength="300"></textarea>
+          <br><br>
+          <label>혜택 2</label>
+
+          <select id="b">
+            <option>선택</option>
+            <option>교통</option>
+            <option>마트편의점</option>
+            <option>쇼핑</option>
+            <option>영화문화</option>
+            <option>주유</option>
+            <option>카페</option>
+            <option>통신</option>
+          </select>  <br>
+
+          <label>혜택 2 상세</label> <br>
+          <textarea cols="70" maxlength="300"></textarea>
+          <br><br>
+          <label>혜택 3</label>
+
+          <select id="c">
+            <option>선택</option>
+            <option>교통</option>
+            <option>마트편의점</option>
+            <option>쇼핑</option>
+            <option>영화문화</option>
+            <option>주유</option>
+            <option>카페</option>
+            <option>통신</option>
+          </select> <br>
+
+          <label>혜택 3 상세</label> <br>
+          <textarea cols="70" maxlength="300"></textarea>
+          <br><br>
+
+        </div>
+
+
+
+
+      </div>
+
+      <input type="reset" value="다시 작성" id="resetbutton">
+
+      <input type="submit" value="등록" id="registerbutton" onclick="check()">
+
+      <br><br>
+
+    </form>
+  </div>
+
+
+
+</section>
 
 
 
