카드사진 업로드 코드 업데이트(실행안됨)

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,7 +23,7 @@
                     <li> <a href="card_chart.html" th:href="@{/card/card_chart_page}"> 차트 </a></li>
                     <li> <a href="cardSearch.html" th:href="@{/card/card_search_page}"> 조건검색 </a></li>
                     <li> <a href="#"> 카드사 </a></li>
-                    <li>  <a href="boardlist.html" th:href="@{/board/boardlist_page}"> 문의 </a></li>
+                    <li>  <a href="boardlist.html" th:href="@{/boardlist_page}"> 문의 </a></li>
                 </ul>
 
             </div>
