--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -30,9 +30,9 @@
 
             <table class="log">
                 <tr>
-                    <td class="userName" th:text="${logName}"></td>
-                    <td th:if="${logName == null}" class="loginBtn"> <a href="login.html" th:href="@{/user/login_page}"> 로그인 </a></td>
-                    <td th:if="${logName != null}" class="logoutBtn"> <a th:href="@{/user/logout}"> 로그아웃 </a> </td>
+                    <td class="userName" th:if="${session.user != null}" th:text="${session.user.name}"></td>
+                    <td th:if="${session.user == null}" class="loginBtn"> <a href="login.html" th:href="@{/user/login_page}"> 로그인 </a></td>
+                    <td th:if="${session.user != null}" class="logoutBtn"> <a th:href="@{/user/logout}"> 로그아웃 </a> </td>
                 </tr>
                 <tr>
                     <td></td>
