[back] 카드사 등록,삭제 기능

--- a/src/main/resources/templates/admin_CardCompanyUpdate.html
+++ b/src/main/resources/templates/admin_CardCompanyUpdate.html
@@ -54,28 +54,16 @@
 
 
           <div id="logodiv">
-          <label id="Clogo">카드사 로고 : </label>
+            <label id="Clogo">카드사 로고 : </label>
 
-              <input type="file" id="companyLogo">
+            <input type="file" id="companyLogo" name="companyLogo">
           </div>
 
           <div id="namediv">
 
-          <label id="Cname">카드사 명 : </label>
+            <label id="Cname">카드사 명 : </label>
 
-            <select id="companyName" placeholder="카드사 명">
-
-            <option value="1">신한카드</option>
-            <option value="2">우리카드</option>
-            <option value="3">하나카드</option>
-            <option value="4">KB국민카드</option>
-            <option value="5">롯데카드</option>
-            <option value="6">삼성카드</option>
-            <option value="7">새마을카드</option>
-
-
-          </select>
-
+            <input type="text" id="companyName" name="companyName">
           </div>
 
           <br><br><br>
