--- a/src/main/resources/templates/admin_CardCompanyList.html
+++ b/src/main/resources/templates/admin_CardCompanyList.html
@@ -6,15 +6,16 @@
     <title>admin cardcompanylist</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
-    <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>-->
-    <!--    <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>-->
-    <!--    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+        <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 
     <link rel="stylesheet" href="../static/css/header.css" />
     <link rel="stylesheet" href="../static/css/footer.css" />
     <link rel="stylesheet" href="../static/css/admin_cardcompanylist.css"/>
 
+    <script th:src="@{/static/js/companyDelete.js}"></script>
 </head>
 <body>
 
@@ -28,15 +29,15 @@
 
         <ul class="nav nav-pills justify-content-end">
             <li>
-                <a href="#"><p >┖ 카드사 목록</p></a>
+                <a href="admin_CardCompanyList" th:href="@{/admin/cardCompany_list_page}"><p >┖ 카드사 목록</p></a>
             </li>
 
             <li>
-                <a href="#"><p>┖ 카드사 등록</p></a>
+                <a href="admin_CardCompanyRegister" th:href="@{/admin/company_regist_page}"><p>┖ 카드사 등록</p></a>
             </li>
 
             <li>
-                <a href="#"><p>┖ 카드 &nbsp; &nbsp;등록</p></a>
+                <a href="admin_CardRegister" th:href="@{/admin/card_regist_page}"><p>┖ 카드 &nbsp; &nbsp;등록</p></a>
             </li>
 
         </ul>
@@ -54,30 +55,25 @@
         <table class="table table-hover" id="table1">
 
             <tr id="head">
+                <th width="150"> 카드사 코드</th>
+                <th width="200"></th>
                 <th width="200">카드사 명</th>
                 <th width="200">등록 카드갯수</th>
-                <th width="200">카드사 로고</th>
-                <th></th>
-                <th></th>
+                <th width="130"></th>
+                <th width="130"></th>
 
             </tr>
 
+            <tr class="tr" th:each="company : ${companylist}">
+             <input type="hidden" id="id" th:value="${company.companyCode}">
 
-
-
-
-            <tr class="tr">
-                <td></td>
-                <td></td>
-                <td></td>
-
-                <td><button id="after1">수정</button></td>
-                <td>
-                    <button id="after2">삭제</button>
-                </td>
+                <td><span th:text="${company.companyCode}"></span></td>
+                <td><img src="@{../static/images/}+${company.companyLogo}" style="width:120px;"/> </td>
+                <td><span th:text="${company.companyName}"></span></td>
+                <td><span th:text="${company.haveCardNum}"></span></td>
+                <td><button class="cardBtn" id="updateBtn"><a href="admin_CardCompanyUpdate" th:href="@{'/company_update_page/'+${company.companyCode}}">수정</a></button></td>
+                <td><button class="cardBtn" id="deleteBtn">삭제</button></td>
             </tr>
-
-
 
         </table>
     </div>
