--- a/src/main/resources/templates/admin_CardCompanyUpdate.html
+++ b/src/main/resources/templates/admin_CardCompanyUpdate.html
@@ -48,7 +48,7 @@
         <p></p>
         <h1 class="register">카드사 수정</h1>
         <br><br>
-        <form method="post" action="/post" id="form">
+        <form method="post" action="'/admin/card_update/'+" id="form" enctype="multipart/form-data">
 
         <div class="container" id="companyinfo">
 
@@ -63,7 +63,7 @@
 
             <label id="Cname">카드사 명 : </label>
 
-            <input type="text" id="companyName" name="companyName">
+            <input type="text" id="companyName" name="companyName" th:value="${companyDto.companyName}">
           </div>
 
           <br><br><br>
