--- a/src/main/resources/static/css/card_list.css
+++ b/src/main/resources/static/css/card_list.css
@@ -101,20 +101,23 @@ a{
         font-size : 15px;
         position: absolute;
         top: 69%;
+        left:-2%;
+        width:400px;
+        text-align:center;
     }
 
     #listInfo .cart{
         display:inline;
-        padding-left:75px;
-        line-height: 52px;
+        padding-left:10px;
+        line-height: 54px;
         font-size : 20px;
     }
    #listInfo .condition img{
+    position : absolute;
     width: 30px;
     height:30px;
-    position : absolute;
-    left:12%;
-    padding:10px;
+    left:26%;
+    padding:12px;
    }
       #listInfo .condition a:hover .cart{
         color : rgba(204,153,255, 1);
