--- a/src/main/resources/templates/card_chart.html
+++ b/src/main/resources/templates/card_chart.html
@@ -34,6 +34,18 @@
                            <a class="cart" onclick='getRadioText(event)' th:id="${i.index+1}"> 비교함 담기</a>
                        </div>
                    </li>
+                   <li id="onechart" th:each="rank, i : ${rankList}"> <!--반복문-->
+                       <p class="rank"> </p>
+                       <img th:src="@{../static/images/} + ${rank.cardPhoto}"/><!--사진-->
+                       <div class="text">
+                           <p class="name" for="a" th:text="${rank.cardName}">dsfsdf</p> <!--카드이름-->
+                           <p th:text="${rank.cardCompany}"></p> <!--카드사-->
+                       </div>
+                       <div id="ex">
+                           <a href="card_detail.html" th:href="@{/card/card_detail_page}" class="more"> 상세 보기</a>
+                           <a class="cart" onclick='getRadioText(event)' id="a"> 비교함 담기</a>
+                       </div>
+                   </li>
                </ul>
                <!--★★★★★★★★비교함에 담길 for이랑 id 값 수정하기★★★★★★★★-->
 
@@ -43,11 +55,11 @@
         <ul>
             <li>
                 <label id="result"></label>
-                <a class="delete_btn"></a>
+                <a class="delete_btn">x</a>
             </li>
             <li>
                 <label id="result2"></label>
-                <a class="delete_btn"><i data-v-b96a19f8>삭제</i></a>
+                <a class="delete_btn">x</a>
             </li>
         </ul>
         <a class="compare_go" href="card_compare.html" th:href="@{/card/card_compare_page}">비교하기</a>
@@ -58,6 +70,7 @@
             const query = 'p[for="'+radioId+'"]'
 
             const text = document.querySelector(query).innerText;
+
 
             if(document.getElementById('result').innerText==text || document.getElementById('result2').innerText==text){
                 alert('이미 비교함에 있는 카드입니다.');
