--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -42,7 +42,7 @@ a{
 
 #menu_inner{
     background-color: #fff;
-    width: 100%;
+    width: 1300px;
     box-shadow: 0px 15px 15px -15px rgb(0 0 0 / 15%);
     z-index : 99; /*우선순위*/
     padding : 15px 0;
